--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <main>
-    <div class="clock">
-        <div class="needle hour"></div>
-        <div class="needle minute"></div>
-        <div class="needle second"></div>
-        <div class="center_point"></div>
-    </div>
-    <div class="time"></div>
-    <div class="date"></div>
+        <div class="toggle">Dark Mode</div>
+        <div class="clock-container">
+            <div class="clock">
+                <div class="needle hour"></div>
+                <div class="needle minute"></div>
+                <div class="needle second"></div>
+                <div class="center_point"></div>
+            </div>
+            <div class="time"></div>
+            <div class="date"></div>
+        </div>
+    
 </main>
 <script src="script.js"></script>
 </body>
